// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dropdown correctly mounts Profile component when a user is logged in 1`] = `
"<Fragment>
  <Blueprint3.Popover content={{...}} inheritDarkTheme={false} position=\\"bottom\\" boundary=\\"scrollParent\\" captureDismiss={false} defaultIsOpen={false} disabled={false} fill={false} hasBackdrop={false} hoverCloseDelay={300} hoverOpenDelay={150} interactionKind=\\"click\\" minimal={false} modifiers={{...}} openOnTargetFocus={true} targetTagName=\\"span\\" transitionDuration={300} usePortal={true} wrapperTagName=\\"span\\">
    <Blueprint3.Button disabled={false} fill={false} intent=\\"none\\" minimal={true} className=\\"\\" type={[undefined]} icon={{...}} />
  </Blueprint3.Popover>
  <DropdownAbout isOpen={false} onClose={[Function (anonymous)]} />
  <DropdownHelp isOpen={false} onClose={[Function (anonymous)]} />
  <Connect(Profile) isOpen={false} onClose={[Function (anonymous)]} />
</Fragment>"
`;

exports[`Dropdown does not mount Profile component when a user is not logged in 1`] = `
"<Fragment>
  <Blueprint3.Popover content={{...}} inheritDarkTheme={false} position=\\"bottom\\" boundary=\\"scrollParent\\" captureDismiss={false} defaultIsOpen={false} disabled={false} fill={false} hasBackdrop={false} hoverCloseDelay={300} hoverOpenDelay={150} interactionKind=\\"click\\" minimal={false} modifiers={{...}} openOnTargetFocus={true} targetTagName=\\"span\\" transitionDuration={300} usePortal={true} wrapperTagName=\\"span\\">
    <Blueprint3.Button disabled={false} fill={false} intent=\\"none\\" minimal={true} className=\\"\\" type={[undefined]} icon={{...}} />
  </Blueprint3.Popover>
  <DropdownAbout isOpen={false} onClose={[Function (anonymous)]} />
  <DropdownHelp isOpen={false} onClose={[Function (anonymous)]} />
</Fragment>"
`;
